# sapphire-journal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  install.ps1  install.sh  release-plz.toml
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  ci.yml  release-cli.yml  release-desktop.yml  release-plz.yml  release-retrieve-cli.yml  release-vscode.yml  release.yml  test-vsix.yml
archelon/: CHANGELOG.md  Cargo.toml  README.md
archelon-cli/: Cargo.toml  README.md
archelon-cli/src/: main.rs
archelon-cli/src/commands/: cache.rs  entry.rs  mod.rs
archelon-core/: Cargo.toml
archelon-core/src/: cache.rs  chunker.rs  embed.rs  emoji.rs  entry.rs  entry_ref.rs  error.rs  journal.rs  journal_state.rs  labels.rs  lancedb_store.rs  lib.rs  ops.rs  parser.rs  period.rs  user_config.rs  vector_store.rs
archelon-dioxus/: Cargo.toml  Dioxus.toml  LICENSE.App-Store-Exception
archelon-mcp/: Cargo.toml  README.md
archelon-mcp/src/: main.rs
archelon-recall/: Cargo.toml  README.md
archelon-recall/src/: config.rs  indexer.rs  main.rs  mcp.rs  state.rs  workspace.rs
archelon-recall/src/commands/: clean.rs  embed.rs  info.rs
archelon-retrieve/: Cargo.toml  README.md
archelon-retrieve/src/: chunker.rs  db.rs  embed.rs
archelon-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
archelon-vscode/src/: cli.ts  entryTreeProvider.ts  extension.ts  journal.ts  mcp.ts
archelon/src/: main.rs
archelon/src/commands/: cache.rs  config.rs  entry.rs  init.rs  mcp.rs  mod.rs
docs/config/: journal-config.toml  user-config.toml
sapphire-journal/: CHANGELOG.md  Cargo.toml  README.md  install.ps1
sapphire-journal-cli/: CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
sapphire-journal-cli/src/: main.rs
sapphire-journal-cli/src/commands/: entry.rs  init.rs  mcp.rs  mod.rs
sapphire-journal-cli/src/shared/: fields.rs  filter.rs  mod.rs  state.rs
sapphire-journal-core/: CHANGELOG.md  Cargo.toml  README.md
sapphire-journal-core/src/: cache.rs  entry.rs  entry_ref.rs  error.rs  journal.rs  journal_state.rs  lib.rs  ops.rs  parser.rs  period.rs  state.rs  user_config.rs  workspace.rs
sapphire-journal-core/src/text_input/: fields.rs  filter.rs  mod.rs
sapphire-journal-core/tests/: example_configs.rs
sapphire-journal-desktop/: Cargo.toml  LICENSE.App-Store-Exception  README.md  install.ps1  install.sh
sapphire-journal-desktop/src/: app.rs  fonts.rs  icons.rs  main.rs  settings.rs
sapphire-journal-desktop/src/dialogs/: clone.rs
sapphire-journal-desktop/src/screens/: journal_home.rs  mod.rs  right_sidebar.rs  settings_panel.rs
sapphire-journal-desktop/src/widgets/: date_picker.rs  mod.rs  month_grid.rs
sapphire-journal-dioxus/: Cargo.toml  LICENSE.App-Store-Exception
sapphire-journal-dioxus/assets/styling/: main.css
sapphire-journal-dioxus/src/: error.rs  main.rs  registry.rs
sapphire-journal-dioxus/src/components/: mod.rs
sapphire-journal-dioxus/src/components/journal_home/: mod.rs  screen.rs
sapphire-journal-dioxus/src/components/journal_list/: clone_dialog.rs  confirm_delete.rs  journal_card.rs  mod.rs  new_journal_dialog.rs  screen.rs
sapphire-journal-gui/: Cargo.toml
sapphire-journal-gui/src/: app.rs  main.rs
sapphire-journal-gui/src/dialogs/: confirm_delete.rs  mod.rs  new_journal.rs
sapphire-journal-gui/src/screens/: journal_home.rs  journal_list.rs  mod.rs  settings_panel.rs
sapphire-journal-mcp/: CHANGELOG.md  Cargo.toml
sapphire-journal-mcp/src/: http.rs  lib.rs  main.rs  server.rs
sapphire-journal-vscode/: .vscodeignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
sapphire-journal-vscode/src/: cli.ts  entryTreeProvider.ts  extension.ts  journal.ts  mcp.ts
sapphire-journal/src/: main.rs
sapphire-journal/src/commands/: cache.rs  config.rs  entry.rs  mcp.rs
sapphire-retrieve/: Cargo.toml
sapphire-retrieve-cli/: CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
sapphire-retrieve-cli/src/: config.rs  indexer.rs  main.rs  mcp.rs  state.rs  workspace.rs
sapphire-retrieve-cli/src/commands/: info.rs  rebuild.rs  sync.rs
sapphire-workspace/: Cargo.toml
sapphire-workspace-cli/: Cargo.toml
sapphire-workspace/examples/cli/: Cargo.toml
