[workspace]
members = ["archelon", "archelon-core"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.4.0"
description = "Markdown-based task and note manager that keeps your data alive as plain text - timeless like fossils"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/archelon"
