[workspace]
members = [
    "archelon",
    "archelon-core",
    "archelon-dioxus",
    "archelon-retrieve",
    "archelon-recall",
]
resolver = "3"

[workspace.package]
version = "0.7.0"
description = "Markdown-based task and note manager that keeps your data alive as plain text - timeless like fossils"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/archelon"
edition = "2024"

[profile.dev.package."*"]
opt-level = 1
