[workspace]
members = [
    "sapphire-journal",
    "sapphire-journal-core",
    "sapphire-journal-dioxus",
    "sapphire-retrieve",
    "sapphire-retrieve-cli",
]
resolver = "3"

[workspace.package]
version = "0.7.0"
description = "Markdown-based task and note manager that keeps your data alive as plain text - timeless like fossils"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/sapphire-journal"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1" }
toml = "1.1"
tracing-subscriber = "0.3"

[profile.dev.package."*"]
opt-level = 1
