[package]
name = "archelon-cli"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "archelon"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target_os }-{ target_arch }{ binary-ext }"
pkg-fmt = "bin"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
archelon-core = { path = "../archelon-core", version = "0.2.0" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4" }
serde_json = "1"
