[package]
name = "archelon-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories = ["text-processing", "filesystem", "data-structures"]
keywords = ["markdown", "task-management", "notes", "frontmatter", "plain-text"]

[dependencies]
caretta-id = { version = "0.12", features = ["serde", "rusqlite", "schemars"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1"
serde_json = "1"
schemars = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
ureq = { version = "2", features = ["json"] }
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
