[package]
name = "archelon-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories = ["text-processing", "filesystem", "data-structures"]
keywords = ["markdown", "task-management", "notes", "frontmatter", "plain-text"]

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store = ["archelon-retrieve/lancedb-store"]
fastembed-embed = ["archelon-retrieve/fastembed-embed"]

[dependencies]
caretta-id = { version = "0.12", features = ["serde", "rusqlite", "schemars"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
schemars = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
archelon-retrieve = { path = "../archelon-retrieve", default-features = false }
