[package]
name = "archelon-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories = ["text-processing", "filesystem", "data-structures"]
keywords = ["markdown", "task-management", "notes", "frontmatter", "plain-text"]

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store = ["archelon-retrieve/lancedb-store"]
fastembed-embed = ["archelon-retrieve/fastembed-embed"]

[dependencies]
caretta-id = { version = "0.12", features = ["serde", "rusqlite", "schemars"] }
serde.workspace = true
serde_yaml = "0.9"
toml.workspace = true
chrono.workspace = true
indexmap.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
archelon-retrieve = { path = "../archelon-retrieve", default-features = false }
