[package]
name = "archelon-dioxus"
version.workspace = true
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition.workspace = true
description.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
archelon-core = { version = "0.7.0", path = "../archelon-core" }
dioxus = { version = "0.7.1", features = [] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
