[package]
name = "archelon-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for archelon"
license.workspace = true

[dependencies]
archelon-core = { path = "../archelon-core" }
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing-subscriber = "0.3"
