[package]
name = "archelon-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for archelon"
license.workspace = true
repository.workspace = true
categories = ["command-line-utilities", "text-processing"]
keywords = ["markdown", "task-management", "notes", "mcp", "mcp-server"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target_os }-{ target_arch }{ binary-ext }"
pkg-fmt = "bin"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
archelon-core = { path = "../archelon-core", version = "0.3.0" }
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing-subscriber = "0.3"
