[package]
name = "archelon-recall"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store   = ["archelon-retrieve/lancedb-store"]
fastembed-embed = ["archelon-retrieve/fastembed-embed"]

[dependencies]
archelon-retrieve = { path = "../archelon-retrieve", default-features = false }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["full"] }
rmcp.workspace = true
schemars.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"
indexmap.workspace = true
