[package]
name = "archelon-retrieve"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]
fastembed-embed = ["dep:fastembed"]

[dependencies]
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
lancedb = { version = "0.14", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
futures = { version = "0.3", optional = true }
fastembed = { version = "5", optional = true }
