[package]
name = "archelon"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories = ["command-line-utilities", "text-processing"]
keywords = ["markdown", "task-management", "notes", "cli", "mcp"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
archelon-core = { path = "../archelon-core", version = "0.4.0" }
rmcp = { version = "1.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "1.0"
tracing-subscriber = "0.3"
