[package]
name = "sapphire-journal-core"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
categories = ["text-processing", "filesystem", "data-structures"]
keywords = ["markdown", "task-management", "notes", "frontmatter", "plain-text"]

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store = ["sapphire-retrieve/lancedb-store"]
fastembed-embed = ["sapphire-retrieve/fastembed-embed"]

[dependencies]
serde.workspace = true
serde_yaml = "0.9"
toml.workspace = true
chrono.workspace = true
indexmap.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
schemars.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
sapphire-retrieve = { path = "../sapphire-retrieve", default-features = false }
grain-id = { version = "0.14", features = ["serde", "rusqlite", "schemars"] }
