[package]
name = "sapphire-journal-desktop"
version = "0.1.0"
authors = ["fluo10 <fluo10@fireturtle.net>"]
edition.workspace = true
description.workspace = true
license-file = "LICENSE"
repository.workspace = true
publish = false

[dependencies]
sapphire-journal-core = { path = "../sapphire-journal-core", version = "0.12.0" }
sapphire-journal-mcp  = { path = "../sapphire-journal-mcp",  version = "0.1.0", default-features = false, features = ["sqlite-store", "lancedb-store", "fastembed-embed", "git-sync", "http-server"] }
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.35", features = ["svg"] }
rfd = "0.17"
git2 = { version = "0.21", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
grain-id = { version = "0.15" }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-util = "0.7"
chrono = { workspace = true }
tracing = { workspace = true }
