[package]
name = "sapphire-journal-dioxus"
version = "0.0.0"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition.workspace = true
description.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
sapphire-journal-core = { path = "../sapphire-journal-core", version = "0.11.1" }
dioxus = { version = "0.7.6", features = [] }
git2 = { version = "0.20", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
