[package]
name = "sapphire-journal-gui"
version = "0.0.0"
authors = ["fluo10 <fluo10.dev@fireturtle.net>"]
edition.workspace = true
description.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
sapphire-journal-core = { path = "../sapphire-journal-core", version = "0.11.1" }
eframe = "0.34"
egui = "0.34"
egui_extras = { version = "0.34", features = ["svg"] }
rfd = "0.15"
git2 = { version = "0.20", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
grain-id = { version = "0.15" }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
chrono = { workspace = true }
