[package]
name = "sapphire-journal-mcp"
edition.workspace = true
version = "0.11.1"
description = "MCP server library for sapphire-journal"
license.workspace = true
repository.workspace = true
categories = ["command-line-utilities"]
keywords = ["markdown", "task-management", "notes", "mcp"]

[lib]
path = "src/lib.rs"

[features]
default = ["sqlite-store", "lancedb-store", "fastembed-embed", "git-sync"]
sqlite-store = ["sapphire-journal-core/sqlite-store"]
lancedb-store = ["sapphire-journal-core/lancedb-store"]
fastembed-embed = ["sapphire-journal-core/fastembed-embed"]
git-sync = ["sapphire-journal-core/git-sync"]
http-server = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:tokio-util"]

[dependencies]
sapphire-journal-core = { path = "../sapphire-journal-core", version = "0.12.0", default-features = false, features = ["text-input"] }
rmcp.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
tokio-util = { version = "0.7", optional = true }
