[package]
name = "sapphire-retrieve-cli"
edition.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store   = ["sapphire-retrieve/lancedb-store"]
fastembed-embed = ["sapphire-retrieve/fastembed-embed"]

[dependencies]
sapphire-retrieve = { path = "../sapphire-retrieve", default-features = false }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["full"] }
rmcp.workspace = true
schemars.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"
indexmap.workspace = true
