[package]
name = "sapphire-retrieve-cli"
edition.workspace = true
version = "0.1.0"
description.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sapphire-retrieve"
path = "src/main.rs"

[features]
default = ["lancedb-store", "fastembed-embed"]
lancedb-store   = ["sapphire-retrieve/lancedb-store"]
fastembed-embed = ["sapphire-retrieve/fastembed-embed"]

[dependencies]
sapphire-retrieve = { version = "0.1.0", path = "../sapphire-retrieve", default-features = false }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["full"] }
rmcp.workspace = true
schemars.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"
indexmap.workspace = true
